avoid confict when installing pip3
When using [ parameterized_docker_build.sh](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/docker/parameterized_docker_build.sh) to build a tensorflow docker image from [nvidia/cuda:9.0-cudnn7-devel-ubuntu16.04](https://hub.docker.com/r/nvidia/cuda/). There is [code](https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/docker/parameterized_docker_build.sh#L259) that change "pip" to "pip3" which will cause an error while installing pip3 because it change "python-pip" to "python-pip3".

--- a/tensorflow/tools/docker/Dockerfile.devel-gpu-cuda9-cudnn7
+++ b/tensorflow/tools/docker/Dockerfile.devel-gpu-cuda9-cudnn7
@@ -18,7 +18,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         libzmq3-dev \
         pkg-config \
         python-dev \
-        python-pip \
         rsync \
         software-properties-common \
         unzip \
@@ -30,9 +29,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+    
+RUN curl -fSsL -O https://bootstrap.pypa.io/get-pip.py && \
+        python get-pip.py && \
+        rm get-pip.py
 
 RUN pip --no-cache-dir install --upgrade \
-        pip setuptools
+        setuptools
 
 RUN pip --no-cache-dir install \
         ipykernel \
